--- a/blogs/templates/blogs/category_index.html
+++ b/blogs/templates/blogs/category_index.html
@@ -9,10 +9,12 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
-
+{% load header_tag %}
+{% logged_in_user user%}
 
 <body>
 {% if Categories %}
+    <h1>Categories List</h1>
     <ul>
         {% for Category in Categories %}
 
