--- a/blogs/templates/blogs/Post_detail.html
+++ b/blogs/templates/blogs/Post_detail.html
@@ -39,7 +39,7 @@
                     </button>
                 {% endbuttons %}
             </form>
-            <form action="{% url 'blog:UpdatePostView' post.category.id post.id comment.id%}" method="Post" style="display:inline-table">
+            <form action="{% url 'blog:UpdatePostView' post.category.id post.id%}" method="Post" style="display:inline-table">
                 {% csrf_token %}
                 {% buttons %}
                     <button type="submit", class="align-right float-right pull-right">
